[TEST] Add unit tests for Stock statistics methods #19